# dmc-view

./: .codacy.yaml  .coveragerc  .gitignore  .pylintrc  .readthedocs.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.rst  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.rst  SECURITY.md  TECHNICALDEBT.rst  TODO.rst  index.rst  mypy.ini  pyproject.toml  pytest.ini  req-docs.txt  reqs.txt  requirements.txt  tox.ini
.github/: AUTHORS.md  CODEOWNERS  CONTRIBUTING.md  labeler.yml
.github/workflows/: ci_cd.yaml  docker.yml  policy_docs.yml  policy_lint.yml  python_imports.yml  release.yaml  release_prod.yaml  release_test.yaml  stale.yml  test.yaml
docs/: conf.py  index.rst
docs/html/doctrees/: environment.pickle
docs/html/doctrees/contents/: dmc_view.doctree  dmcview.doctree  modules.doctree  usage.doctree
docs/html/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/html/_modules/: index.html
docs/html/html/_modules/dmc_view/: compass.html
docs/html/html/_sources/contents/: dmcview.rst.txt
docs/html/html/contents/: development.html  dmc_view.html  dmcview.html  modules.html  usage.html
docs/source/: conf.py  index.rst  requirements.txt  spelling_wordlist.txt
docs/source/contents/: 10_development.rst  10_introduction.rst  20_usage.rst  20_why_this_package.rst  30_usage.rst  40_api.rst  40_modules.rst  50_api.rst  code_of_conduct.md  contributing.md  development.rst  dmc_view.rst  modules.rst  usage.rst
lab/matplot3d/: lab1.plot.py  lab1.py  lab2.py  lab3.py  lab4_surfaceplots.py  lab6_accelarationSimulator.py  lab7_input.py
scripts/: parse_version.py  visualize-dockerfile.py
src/: app.py
src/dmc_simulator/: __init__.py
src/dmc_simulator/lab/: lab1.py
src/dmc_view/: __about__.py  __main__.py  cli.py  compass.py  main.py  simulator.py
src/dmc_view/lab/: lab1.py  lab2.py  lab3.py  lab4.py  lab5.py
src/dmcview/: __init__.py  __main__.py  accele3D_signal_manger.py  accele_signal_manger.py  acceleration.py  cli.py  compass.py  signal_manger.py  simulator.py
src/dmcview/lab/matplot3d/: lab8_compass.py  lab9_cli.py
tests/: conftest.py  smoke_test.py  test_animate_declination.py  test_assert1.py  test_class.py  test_class_demo.py  test_cli.py  test_drawings.py  test_foo_not_implemented.py  test_get_float_input.py  test_invoking_cli.py  test_recursion_depth.py  test_rotate_angle.py  test_sample.py  test_start_animation_timer.py  test_sysexit.py  test_tmp_path.py  test_update_angle.py  test_zero_division.py
tests/dir1/: test_class_dir1.py
tests/dir_fixture1/: test_append3.py
tests/pytest/: test_drawings.py
tests/test_acceleration/: test_acceleration.py
tests/test_cli/: test_cli.py  test_cli_input.py
tests/test_compass/: test_compass.py
tests/test_simulator/: test_simulator.py
