# pyproject .toml specification https://packaging.python.org/en/latest/specifications/pyproject-toml/
# see https://python-package-generator.readthedocs.io/en/master/
# BUILD
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hatchling 
# Information required for building (sdist/wheel)
## Also renders on pypi as 'subtitle'

[project]
name = "dmc_view"
dynamic = ["version"]
description = "Digital Magnatic Compass Viewer"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.8"
authors = ["Amed Mehio <alan.xxxxx@gmail.com>","Isso Hass<isso@gmail.com>"]
maintainers = ["Amed Mehio <alan.xxxxx@gmail.com>","Isso Hass<isso@gmail.com>"]
keywords = [
    "Compass","Azimuth", "Bank", "Elevation", "Inclination",
    "Declination", "Magnatic Compass"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Aviation",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Hardware Product",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft,
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed",
]

dependencies = [
  "pyside6>=6.6.1",
]


[project.urls]
Homepage = "https://github.com/alanmehio/dmc-view"
Source = "https://github.com/alanmehio/dmc-view"
Issues="https://github.com/alanmehio/dmc-view/issues"
Documentation = "https://dmc-view.readthedocs.io/"


[tool.hatch.version]
path = "src/dmc_view/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dmc_view tests}"

[tool.coverage.run]
source_pkgs = ["dmc_view", "tests"]
branch = true
parallel = true
omit = [
  "src/dmc_view/__about__.py",
]

[tool.coverage.paths]
dmc_view = ["src/dmc_view", "*/dmc-view/src/dmc_view"]
tests = ["tests", "*/dmc-view/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]




# Test: packages imported in test code and packages required for the "test runner"
pytest = { version = "^8.0.0", optional = true }
pytest-cov = { version = "^4.1.0", optional = true }
pytest-explicit = { version = "^1.0.1", optional = true }
pytest-xdist = { version = "^3.5.0", optional = true }
pytest-click = { version = "^1.1.0", optional = true }
pytest-run-subprocess = { version = "^0.10.0", optional = true }

# Type Checking
mypy = { version = "^1.8.0", optional = true }

# Docs: dev and build dependencies
sphinx = { version = "~4", optional = true }
sphinx-autodoc-typehints = { version = ">= 1.10", optional = true }
sphinx-rtd-theme = { version = "== 0.5.0", optional = true }
sphinxcontrib-spelling = { version = "~= 7.3.3", optional = true }
sphinx-autobuild = { version = "^2021.3.14", optional = true }
sphinx-inline-tabs = { version = "^2023.4.21", optional = true, python = ">=3.8,<3.13" }
sphinxcontrib-mermaid = { version = "^0.9.2", optional = true, python = ">=3.7,<3.13" }


# TOOLS
[tool.pytest.ini_options]
minversion = "6.2"
addopts = "--strict-markers"
markers = [
    "slow: Marks a slow test",
    "integration: Integration Tests",
    "network_bound: Require internet connection",
]
testpaths = [
    "tests",
]
explicit-only = [
    "integration",
    "network_bound",
]

[tool.black]
line-length = 95
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = 'black'

[tool.bandit]
tests = []
skips = [
    "B101",
]

[tool.software-release]
version_variable = "src/dmc_view/__about__.py:__version__"
